--- a/css/stylesproduct-info.css
+++ b/css/stylesproduct-info.css
@@ -26,7 +26,7 @@
  }
 
  .mt-3, .ms-3 {
-     font-family: "Roboto", sans-serif;
+     font-family: "Roboto",;
      font-optical-sizing: auto;
      font-weight: 100;
 
@@ -34,25 +34,25 @@
  }
 
  .mt-3 {
-   position: relative;
-   margin-bottom: 1.9rem !important;
+
+   margin-bottom: 2.9rem !important;
 
  }
 
  .cat {
-    margin-top: -7.5rem;
+   
     text-align: right;
  }
 
  .vendidos {
-   position: relative;
+
    text-align: right;
  }
 
  .precio-valor {
-   font-size: 18px;
-   position: relative;
-   top: 3rem;
+   font-size: 20px;
+   font-family:  "Playfair Display", serif;
+
  }
 
 .carousel-indicators {
