--- a/css/colors.css
+++ b/css/colors.css
@@ -14,6 +14,7 @@
     --dark-details: #cc5c72;
     --dark-hover: #1a1a1a;
     --dark-btn: #9B2242;
+    --dark-innercard:#575757;
 }
 
         /* Todo esto es darkmode */
