--- a/css/stylescategoria.css
+++ b/css/stylescategoria.css
@@ -3,6 +3,9 @@
 body {
     background-color: light-dark(var(--light-bg),var(--dark-bg));
     color: light-dark(var(--dark-btn),var(--dark-color));
+    
+     height: 100vh;
+
 }
 
 
