--- a/css/stylesautos.css
+++ b/css/stylesautos.css
@@ -26,7 +26,7 @@
     }
 
     & .card-footer:hover {
-        filter: brightness(85%);
+       background-color: var(--hover);
 
     }
 
@@ -43,6 +43,7 @@ body {
     background-position: center;
     background-attachment: fixed;
     z-index: 1;
+    width: 100%;
 }
 
 header {
@@ -73,7 +74,7 @@ header img {
 
 
 .barra {
-    background-color: #E8E8E8;
+    background-color: var(--card);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,7 +100,7 @@ input {
     border: 0;
     outline: none;
     font-size: 1rem;
-    background-color: #E8E8E8;
+    background-color: var(--card);
     border-radius: 5px;
     margin-bottom: 5px;
     
@@ -108,7 +109,7 @@ input {
 
 button {
     background-color: light-dark(var(--light-btn), var(--dark-btn));
-    color: light-dark(var(--light-color), var(--dark-color));
+    color: var(--text);
     border: none;
     padding: 10px 28px;
     margin-bottom: 15px;
@@ -118,14 +119,13 @@ button {
 }
 
 button:hover {
-    background-color: hsl(294, 93%, 21%);
+    background-color: var(--hover);
     color: white;
 }
 
 
 .Boton {
-    background-color: #E8E8E8;
-    ;
+    background-color: var(--card);
     padding: 10px 20px;
     position: absolute;
     border: 0;
@@ -144,7 +144,7 @@ button:hover {
 }
 
 .Boton:hover {
-    background-color: #f485dc;
+    background-color: var(--hover);
     padding-left: 30px;
 
 }
@@ -194,7 +194,7 @@ button:hover {
     }
 
     .barra input {
-        width: 350px;
+        width: 330px;
         padding: 10px;
         padding-right: 10px;
         border: 0;
@@ -228,14 +228,14 @@ button:hover {
     }
 
     header {
-
+        margin-bottom: 0;
         padding-bottom: 5vh;
     }
 
     .barra {
         border-radius: 8px;
         left: 0%;
-        margin-top: 15vh;
+       
         margin-bottom: 2px;
         position: relative !important
     }
@@ -295,7 +295,12 @@ button:hover {
     .products .box-container .box {
         grid-template-columns: repeat(2, 1fr);
     }
+    header img {
+        
+       width: 70vw;
+       height: auto;
 
+    }
 }
 
 .products .box-container .box .image {
@@ -418,7 +423,7 @@ a:hover {
     border: 0;
     outline: none;
     font-size: 1rem;
-    background-color: light-dark(var(--light-card), var(--dark-card));
+    background-color: var(--card);
     border-radius: 5px;
     margin-bottom: 5px;
 
@@ -431,9 +436,12 @@ a:hover {
     outline: none;
     font-size: 1rem;
     background-color: light-dark(var(--light-btn), var(--dark-btn));
-    color: light-dark(var(--light-color), var(--dark-color));
+    color: var(--text);
     border-radius: 5px;
     margin-bottom: 5px;
+}
+.btn-fil:hover { 
+    background-color: var(--hover);
 }
 
 @media only screen and (max-width: 600px) {
