--- a/css/stylescategoria.css
+++ b/css/stylescategoria.css
@@ -1,28 +1,27 @@
-@import url(colors.css);
+@import url(/css/colors.css);
 
 body {
-    background-color: light-dark(var(--light-bg),var(--dark-bg));
-    color: light-dark(var(--dark-btn),var(--dark-color));
-    
-     height: 100vh;
+    background-color: var(--background);
+    color: var(--text);
+    height: 100vh;
 
 }
 
 
 
 .list-group {
-    background-color: light-dark(var(--light-btn),var(--dark-details));
+    background-color: var(--card) !important; 
  }
 
 
 .list-group-item {
-    background-color: light-dark(var(--light-color),var(--dark-card));
-    color: light-dark(var(--light-btn),var(--dark-text));
+    background-color: var(--card);
+    color: var(--text);
  }
 
  .list-group-item:hover { 
-            background-color:light-dark(var(--light-btn), var(--dark-hover));
-            color: light-dark(var(--dark-btn), var(--dark-details));
+            background-color:var(--hover);
+            color: var(--text);
     } 
     
     
@@ -39,4 +38,10 @@ h2 {
     
     color:light-dark(var(--dark-text),var(--dark-details));
     text-shadow: 2px 2px 2px black;
+}
+
+.img-fixed {
+  max-width: 100px;
+  width: 100%;
+  height: auto;
 }
