update color change for class change

--- a/css/stylesproduct-info.css
+++ b/css/stylesproduct-info.css
@@ -178,3 +178,8 @@ footer {
     background-color:light-dark(var(--light-card),var(--dark-card));
     box-shadow: 0 6px 6px 0 rgba(172, 57, 115, 0.567);
     }
+
+
+    .hover-star { 
+      color: var(--details);
+    }
