--- a/css/stylesproduct-info.css
+++ b/css/stylesproduct-info.css
@@ -37,10 +37,24 @@ body {
   background-color: var(--hover);
 }
 .inset-shadow:active {
-  background-color: #0a0a0a;
+  background-color: #0a0a0a !important;
   box-shadow:
     inset 0 1px #262626,
-    0 0 #0000;
+    0 0 #0000 !important;
+}
+.inset-shadow:focus { 
+   position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 0.375rem;
+  background-color: var(--btn);
+  padding: 6px 12px;
+  color: #f5f5f5;
+  border: 1px solid var(--details);
+  box-shadow:
+    inset 0 1px var(--hover),
+    0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
 
 
