fixing some stuff

--- a/css/colors.css
+++ b/css/colors.css
@@ -22,6 +22,13 @@
     --hover: light-dark(var(--light-hover), var(--dark-hover));
     --details: light-dark(var(--light-details), var(--dark-details));
     --btn: light-dark(var(--light-btn), var(--dark-btn));
+    
+    --light-filter: drop-shadow(1px 1px 1px);
+
+    --dark-filter: brightness(0) invert(1) grayscale(1) contrast(100) drop-shadow(2px 2px 2px);
+
+    --current-filter: light-dark(var(--light-filter), var(--dark-filter));
+
 }   
 
         /* Todo esto es darkmode */
@@ -51,8 +58,12 @@
 
          & header img {
         
-        filter: brightness(0) invert(1) grayscale(1) contrast(100) drop-shadow(2px 2px 2px);
+        filter: var(--dark-filter);
 
+    }
+
+    & #logojap, #eMercado {
+        filter: var(--dark-filter);
     }
 }
 
@@ -79,10 +90,12 @@
     }
      & header img {
         
-        filter: none !important;
+        filter: var(--light-filter) !important;
 
     }
-
+    & #logojap, #eMercado {
+        filter: var(--light-filter) !important;
+    }
    
 }
 
@@ -104,6 +117,12 @@ body::before {
     pointer-events: none;
 }  
 
+
+ #logojap, #eMercado, #jap-emercado {
+        filter: var(--light-filter) !important;
+    }
+
+
 @media (prefers-color-scheme: dark) {
         body::before {
         filter: grayscale(1) brightness(0.2);
@@ -111,8 +130,12 @@ body::before {
        
        & header img {
         
-        filter: brightness(0) invert(1) grayscale(1) contrast(100) drop-shadow(2px 2px 2px) !important;
+        filter: var( --dark-filter) !important;
 
+    }
+
+    #logojap, #eMercado, #jap-emercado {
+        filter: var(--dark-filter) !important;
     }
 
     } 
