--- a/css/stylesmenu.css
+++ b/css/stylesmenu.css
@@ -1,6 +1,8 @@
 @import url(/css/colors.css);
 @media (max-width: 990px) {
-
+.bg-light {
+    background-color: var(--card) !important;
+}
 
 .navbar-toggler  {
  position: absolute;
