--- a/css/stylemy-profile.css
+++ b/css/stylemy-profile.css
@@ -37,3 +37,51 @@
     width: 50vw;
     background-color: var(--card);
 }
+
+
+.image {
+  width: 150px;
+  height: 150px;
+  margin: 1rem auto;
+  perspective: 1000px;
+  cursor: pointer;
+}
+
+.image-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  border-radius: 50%;
+}
+
+.image:hover .image-inner {
+  transform: rotateY(180deg);
+}
+
+.image-front,
+.image-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  backface-visibility: hidden;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-front img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.image-back {
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  font-size: 48px;
+  transform: rotateY(180deg);
+}
