--- a/css/stylesproduct-info.css
+++ b/css/stylesproduct-info.css
@@ -8,17 +8,35 @@ body {
   height: 100%; 
   }
 }
-#buy { 
-  max-width: 70%;
-}
+
 
 #save {
-  max-width: 20%;
+ max-width: 8rem;
+}
+
+#amountInput { 
+  max-width: 4rem;
 }
 
 .border-top { 
   border-color: var(--details) !important;
 }
+
+.title {
+  color: var(--text);
+   text-shadow: 2px 2px 2px var(--hover);
+}
+
+.desc{
+  color: var(--text);
+}
+
+.text-muted {
+  color: var(--text) !important;
+  filter: opacity(50%) !important;
+
+}
+
    
 .inset-shadow { 
    position: relative;
@@ -68,6 +86,7 @@ body {
 
 
 .card-custom {
+    
     background-color:light-dark(var(--light-card),var(--dark-card));
     display: flex;
     border-radius: 10px;
@@ -83,14 +102,14 @@ body {
 
  .deco, .des{
 
-     font-family: "Playfair Display", serif;
-     font-optical-sizing: auto;
+    
+     
      font-weight: 300;
      font-style: normal;
      position: relative;
+     text-shadow: 2px 2px 2px black;
    
-   
-     color:var(--text);
+     color:light-dark(var(--dark-text),var(--dark-details));
  }
 
  .mt-3, .ms-3 {
@@ -125,7 +144,8 @@ body {
  .precio-valor {
    font-size: 30px;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-   color: light-dark(var(--light-text),var(--dark-text));
+   color: var(--details);
+  text-shadow: 2px 2px 2px var(--background);
  }
 
 .carousel-indicators {
@@ -139,8 +159,8 @@ body {
 
 .card  {
   background-color: light-dark(var(--light-card),var(--dark-innercard));
-  color: light-dark(var(--light-text),var(--dark-text));
-  height: 15vh;
+  color: var(--text); 
+  
   border-radius: 10px;
     box-shadow: 0 6px 6px 0 rgba(172, 57, 115, 0.567);
     display: flex;
