--- a/css/stylesproduct-info.css
+++ b/css/stylesproduct-info.css
@@ -10,6 +10,33 @@ body {
 }
 
 
+#save {
+ max-width: 8rem;
+}
+
+#amountInput { 
+  max-width: 4rem;
+}
+
+.border-top { 
+  border-color: var(--details) !important;
+}
+
+.title {
+  color: var(--text);
+   text-shadow: 2px 2px 2px var(--hover);
+}
+
+.desc{
+  color: var(--text);
+}
+
+.text-muted {
+  color: var(--text) !important;
+  filter: opacity(50%) !important;
+
+}
+
    
 .inset-shadow { 
    position: relative;
@@ -59,6 +86,7 @@ body {
 
 
 .card-custom {
+    
     background-color:light-dark(var(--light-card),var(--dark-card));
     display: flex;
     border-radius: 10px;
@@ -68,20 +96,18 @@ body {
     .carousel-inner {
         border-radius: 1rem;
         box-shadow: 0 4px 4px 0 rgba(161, 88, 125, 0.567);
-        top: 1rem;
-        left: 0.5rem;
     }
 
  .deco, .des{
 
-     font-family: "Playfair Display", serif;
-     font-optical-sizing: auto;
+    
+     
      font-weight: 300;
      font-style: normal;
      position: relative;
+     text-shadow: 2px 2px 2px black;
    
-   
-     color:light-dark(var(--light-text),var(--dark-text));
+     color:light-dark(var(--dark-text),var(--dark-details));
  }
 
  .mt-3, .ms-3 {
@@ -116,7 +142,8 @@ body {
  .precio-valor {
    font-size: 30px;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-   color: light-dark(var(--light-text),var(--dark-text));
+   color: var(--details);
+  text-shadow: 2px 2px 2px var(--background);
  }
 
 .carousel-indicators {
@@ -124,13 +151,14 @@ body {
 }
 .des{
     font-size:18px;
+    
 }
 
 
 .card  {
   background-color: light-dark(var(--light-card),var(--dark-innercard));
-  color: light-dark(var(--light-text),var(--dark-text));
-  height: 15vh;
+  color: var(--text); 
+  
   border-radius: 10px;
     box-shadow: 0 6px 6px 0 rgba(172, 57, 115, 0.567);
     display: flex;
@@ -181,4 +209,10 @@ footer {
  .grow:hover { 
   transform: scale(1.050);
 
+ }
+
+
+ .check {
+  border: 0.2rem solid var(--hover);
+  border-radius: 2px;
  }
