--- a/css/stylecart.css
+++ b/css/stylecart.css
@@ -16,7 +16,7 @@
 
 .card {
     background-color: var(--card);
-    color: var(--text);
+    color:black;
 }
 
 
@@ -44,23 +44,20 @@ input[type=number]:active, input[type=number]:focus {
  background-color: var(--dark-innercard);
 }
 .accordion-button {
-    background-color:light-dark(var(--dark-text),var(--dark-innercard));
+    background-color:light-dark(var(--light-card),var(--dark-innercard));
     color:light-dark(var(--light-text),var(--dark-text));
   }
 
-  /* Fondo cuando el acordeón está abierto */
   .accordion-button:not(.collapsed) {
     background-color:light-dark(var(--dark-text),var(--dark-details));
     color: light-dark(var(--light-text),var(--dark-text));
     box-shadow: none;
   }
 
-  /* El cuerpo del acordeón */
   .accordion-body {
     background-color: #fdfdfd;
   }
 
-  /* Bordes redondeados suaves */
   .accordion-item {
     border-radius: 10px;
     overflow: hidden;
@@ -70,3 +67,16 @@ input[type=number]:active, input[type=number]:focus {
   .accordion-header{
     background-color: light-dark(var(--dark-text),var(--dark-innercard))
   }
+  .costo-card {
+  background-color: light-dark(var(--dark-text), var(--dark-text));
+  border-radius: 10px;
+  overflow: hidden;
+  border: 1px;
+}
+
+.costo-card .card-header {
+  background-color: light-dark(var(--light-card), var(--dark-innercard));
+  color: light-dark(var(--light-text), var(--dark-text));;
+  border-bottom: none;
+  border: 1px solid light-dark(var(--dark-text), var(--dark-details));
+}
